kubernetes/cluster0/apps/networking/traefik/external-services/kube-networking.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-externalname
  namespace: networking
spec:
  type: ExternalName
  ports:
  - name: http
    port: 6443
  externalName: "${CONTROLPLANE_IP}"

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: k8s-externalroute
#   namespace: networking
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: web
#     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
#     external-dns/is-public: "true"
# spec:
#   ingressClassName: traefik
#   rules:
#     - host: k8s.${SECRET_PUBLIC_DOMAIN}
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: k8s-externalname
#                 port:
#                   number: 6443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: k8s-externalroute
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik 
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: "Host(`k8s.${SECRET_PUBLIC_DOMAIN}`)"
      priority: 1
      services:
        - name: k8s-externalname
          namespace: networking
          port: 6443
  tls:
    passthrough: true
